--- a/docroot/themes/custom/site/src/styles/theme/components/_loader.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/_loader.scss
@@ -10,6 +10,7 @@
 @import "header";
 @import "footer";
 @import "button";
+@import "fieldset";
 @import "navbar";
 @import "notify";
 @import "angled-background";
