--- a/docroot/modules/custom/vih_subscription/templates/vih-subscription-short-course-order-form.html.twig
+++ b/docroot/modules/custom/vih_subscription/templates/vih-subscription-short-course-order-form.html.twig
@@ -5,13 +5,6 @@
 <section class="sectioned sectioned--content">
     <div class="sectioned__inner">
         <div class="container">
-            <div class="row">
-              <div class="col-xs-12 tilmeldings-knap">
-                <a href="{{ form['#course']['url'] }}" class="btn-arrow">
-                  {{ "Back to course"|t }}
-                </a>
-              </div>
-            </div>
 
             <div class="partial">
                 <div class="partial__heading">
@@ -27,14 +20,14 @@
                     <p>
                         {{ "Særligt for korte kurser - Tilkøb af linned: Du kan tilkøbe linnedpakke med sengetøj og to håndklæder, når du ankommer til skolen for 85 kroner per person eller selv medbringe eget sengetøj."|t }}
                     <p>
+
+                    <a href="{{ form['#course']['url'] }}" class="btn btn-default btn-sm">
+                        {{ "Back to course" | trans }}
+                    </a>
                 </div>
             </div>
 
             <hr>
-
-            <div id="status_messages">
-                {{ form['status_messages'] }}
-            </div>
 
             <div class="row">
                 <div class="col-xs-12 col-sm-6">
@@ -47,17 +40,11 @@
                       </div>
                       <div class="partial__body">
                         {{ form['newParticipantContainer'] }}
-                        <br/>
                       </div>
                     </div>
 
                     {# Options START #}
                     <div class="partial">
-                      <div class="partial__heading">
-                        <h4 class="partial__heading__title">
-                          {{ "Available options" | t }}
-                        </h4>
-                      </div>
                       <div class="partial__body">
                         {{ form['availableOptionsContainer'] }}
                       </div>
@@ -65,10 +52,7 @@
                     {# Options END #}
                     {# Participant container END #}
 
-                    {{ form['message'] }}
-                    {{ form['actions'] }}
                 </div>
-
 
                 <div class="col-xs-12 col-sm-6">
 
@@ -87,20 +71,21 @@
                     </div>
                     <!-- End - price -->
 
-                    <!-- Begin - price -->
-                    <div class="boxy boxy--price">
-                      <div class="boxy__heading">
-                        <h4 class="boxy__heading__title">
-                          {{ 'Added participants' | trans }}
-                        </h4>
-                      </div>
-                      <div class="boxy__body">
+                    <!-- Begin - participants -->
+                    <div class="partial partial--participants">
+                      <div class="partial__body">
                         {{ form['addedParticipantsContainer'] }}
                       </div>
                     </div>
-                    <!-- End - price -->
+                    <!-- End - participants -->
 
                 </div>
+            </div>
+
+            <hr>
+
+            <div class="text-right">
+                {{ form['actions'] }}
             </div>
 
         </div>
