--- a/docroot/themes/custom/site/templates/input/input--button.html.twig
+++ b/docroot/themes/custom/site/templates/input/input--button.html.twig
@@ -26,22 +26,21 @@
   {%
     set classes = [
       'btn',
-      'btn-success',
       type == 'submit' ? 'js-form-submit',
       icon and icon_position and not icon_only ? 'icon-' ~ icon_position,
     ]
   %}
   {% block input %}
-    {% if icon_only %}
+    {% if icon and icon_only %}
       <button{{ attributes.addClass(classes, 'icon-only') }}>
         <span class="sr-only">{{ label }}</span>
         {{ icon }}
       </button>
     {% else %}
       {% if icon_position == 'after' %}
-        <button{{ attributes.addClass(classes) }}>{{ label }}</button>{{ children }}
+        <button{{ attributes.addClass(classes) }}>{{ label }}{{ icon }}</button>{{ children }}
       {% else %}
-        <button{{ attributes.removeClass('btn-default').addClass(classes) }}>{{ label }}</button>{{ children }}
+        <button{{ attributes.addClass(classes) }}>{{ icon }}{{ label }}</button>{{ children }}
       {% endif %}
     {% endif %}
     {{ children }}
