File paragraph - add spacing

--- a/docroot/themes/custom/site/src/styles/theme/entity/paragraph/type/_file.scss
+++ b/docroot/themes/custom/site/src/styles/theme/entity/paragraph/type/_file.scss
@@ -36,6 +36,10 @@ $lg-paragraph-action-heading-margin-bottom: 100px;
 
   .field--name-file {
     text-align: center;
+
+    + .field--name-field-link {
+      margin-top: 50px;
+    }
   }
 
   .field--name-field-link {
