--- a/docroot/themes/custom/site/src/styles/theme/components/_footer.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/_footer.scss
@@ -70,7 +70,14 @@ $md-footer-bottom-padding-top-bottom: 55px;
     }
   }
 
-  .menu {
+  .menu,
+  .menu.footer {
+
+    // These are overrides, which is added because of the naming of the footer menu block
+    border-top: 0;
+    margin-top: 0;
+    padding-top: 0;
+    padding-bottom: 0;
 
     > li {
 
