Responsive hiding header region

--- a/docroot/themes/custom/site/src/styles/theme/components/_breadcrumb.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/_breadcrumb.scss
@@ -96,12 +96,7 @@ $breadcrumb-active-background-color: $brand-primary;
 @media #{$breakpoint-mobile-and-up} {}
 
 // Mobile - only
-@media #{$breakpoint-mobile-only} {
-
-  .breadcrumb {
-    display: none;
-  }
-}
+@media #{$breakpoint-mobile-only} {}
 
 // Tablet - and up
 @media #{$breakpoint-tablet-and-up} {
