--- a/docroot/themes/custom/site/templates/page/page.html.twig
+++ b/docroot/themes/custom/site/templates/page/page.html.twig
@@ -78,7 +78,7 @@
             {# Begin - header #}
             {% if page.header is defined and page.header | render | striptags | trim %}
                 {% block header %}
-                    <section class="sectioned sectioned--header sectioned--small-inner-spacing">
+                    <section class="sectioned sectioned--header sectioned--small-inner-spacing hidden-xs">
                         <div class="sectioned__inner">
                             <div class="container">
                                 {{ page.header }}
