--- a/docroot/themes/custom/site/src/styles/theme/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/_page-layout.scss
@@ -259,10 +259,11 @@ html {
 }
 .course-supervisor {
   color: #888;
-}
-.course-supervisor a {
-  color: #212121;
-  font-size: 14px;
+
+  a {
+    color: #212121;
+    font-size: 14px;
+  }
 }
 tr {
   background: transparent !important;
