--- a/docroot/themes/custom/site/src/styles/theme/entity/paragraph/field/_heading.scss
+++ b/docroot/themes/custom/site/src/styles/theme/entity/paragraph/field/_heading.scss
@@ -17,11 +17,9 @@
 .paragraph {
 
   .field--name-field-heading {
-    @extend h2;
+    @extend .heading-h2;
 
     margin-top: 0;
-
-    text-transform: uppercase;
   }
 }
 
