--- a/docroot/themes/custom/site/src/styles/theme/entity/paragraph/field/_loader.scss
+++ b/docroot/themes/custom/site/src/styles/theme/entity/paragraph/field/_loader.scss
@@ -1,6 +1,8 @@
 @import "heading";
 @import "link";
+@import "author";
 @import "description";
 @import "body";
 @import "highlighted";
 @import "file";
+@import "paragraph-text";
