--- a/docroot/themes/custom/site/src/styles/theme/entity/paragraph/type/_loader.scss
+++ b/docroot/themes/custom/site/src/styles/theme/entity/paragraph/type/_loader.scss
@@ -6,7 +6,7 @@
 @import "video";
 @import "single-class-group";
 @import "file";
+@import "quote";
 
 // Files below needs to be cleaned up
 @import "_paragraph-type-teacher-class-description";
-@import "_paragraph-type-user-quote";
