--- a/docroot/themes/custom/site/src/styles/theme/entity/paragraph/field/_author.scss
+++ b/docroot/themes/custom/site/src/styles/theme/entity/paragraph/field/_author.scss
@@ -1,9 +1,9 @@
 // |--------------------------------------------------------------------------
-// | Body
+// | Author
 // |--------------------------------------------------------------------------
 // |
 // | This file contains styles for the following:
-// | - .field--name-field-body
+// | - .field--name-field-author
 // |
 
 // --------------------------------------------------
@@ -16,7 +16,12 @@
 
 .paragraph {
 
-  .field--name-field-body {}
+  .field--name-field-author {
+    @extend .heading-h4;
+
+    font-style: italic;
+    color: $headings-color;
+  }
 }
 
 // --------------------------------------------------
@@ -28,7 +33,7 @@
   // Background image
   &.sectioned--skewed--background-image {
 
-    .field--name-field-body {
+    .field--name-field-author {
       color: #fff;
     }
   }
@@ -36,23 +41,23 @@
   // White
   &.sectioned--skewed--background-color-white {
 
-    .field--name-field-body {
-      color: $text-color;
+    .field--name-field-author {
+      color: $headings-color;
     }
   }
 
   // Light gray
   &.sectioned--skewed--background-color-light-gray {
 
-    .field--name-field-body {
-      color: $text-color;
+    .field--name-field-author {
+      color: $headings-color;
     }
   }
 
   // Gray
   &.sectioned--skewed--background-color-gray {
 
-    .field--name-field-body {
+    .field--name-field-author {
       color: $headings-color;
     }
   }
@@ -60,7 +65,7 @@
   // Primary
   &.sectioned--skewed--background-color-primary {
 
-    .field--name-field-body {
+    .field--name-field-author {
       color: $btn-primary-color;
     }
   }
@@ -68,7 +73,7 @@
   // Secondary
   &.sectioned--skewed--background-color-secondary {
 
-    .field--name-field-body {
+    .field--name-field-author {
       color: $btn-secondary-color;
     }
   }
@@ -112,5 +117,5 @@
 // Mixins
 // --------------------------------------------------
 
-// Body mixin
-@mixin field--name-mixin-field-body() {}
+// Author mixin
+@mixin field--name-mixin-field-author() {}
