--- a/docroot/modules/custom/vih_subscription/templates/vih-subscription-long-course-order-form.html.twig
+++ b/docroot/modules/custom/vih_subscription/templates/vih-subscription-long-course-order-form.html.twig
@@ -145,10 +145,14 @@
             </div>
             <!-- End - adult data -->
 
+            <hr>
+
             <!-- Begin - form controls -->
             <div class="partial partial--form-controls">
                 <div class="partial__body">
-                    {{ form['actions'] }}
+                    <div class="text-right">
+                        {{ form['actions'] }}
+                    </div>
                 </div>
             </div>
             <!-- End - form controls -->
