--- a/docroot/themes/custom/site/src/styles/theme/components/_panels.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/_panels.scss
@@ -118,15 +118,15 @@
   margin-bottom: $grid-gutter-width;
 }
 
-.panel-body {
-
-  .form-group {
-
-    &:last-child {
-      margin-bottom: 0;
-    }
-  }
-}
+//.panel-body {
+//
+//  .form-group {
+//
+//    &:last-child {
+//      margin-bottom: 0;
+//    }
+//  }
+//}
 
 // --------------------------------------------------
 // Variants
