--- a/docroot/themes/custom/site/src/styles/theme/entity/paragraph/type/_loader.scss
+++ b/docroot/themes/custom/site/src/styles/theme/entity/paragraph/type/_loader.scss
@@ -7,6 +7,7 @@
 @import "single-class-group";
 @import "file";
 @import "quote";
+@import "employee";
 
 // Files below needs to be cleaned up
 @import "_paragraph-type-teacher-class-description";
