--- a/docroot/themes/custom/site/src/styles/theme/components/_loader.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/_loader.scss
@@ -4,6 +4,7 @@
 
 @import "page-layout";
 @import "modal";
+@import "photoswipe-gallery";
 @import "banner";
 @import "panels";
 @import "breadcrumb";
