--- a/docroot/themes/custom/site/src/styles/theme/entity/paragraph/type/_loader.scss
+++ b/docroot/themes/custom/site/src/styles/theme/entity/paragraph/type/_loader.scss
@@ -6,6 +6,7 @@
 @import "video";
 @import "single-class-group";
 @import "file";
+@import "gallery";
 @import "quote";
 @import "employee";
 @import "ordered-course-slot";
