Renames field labels and reorder form fields

--- a/docroot/themes/custom/site/templates/node/teaser/node--vih-long-course-order--teaser.html.twig
+++ b/docroot/themes/custom/site/templates/node/teaser/node--vih-long-course-order--teaser.html.twig
@@ -45,7 +45,7 @@ view_mode ? view_mode|clean_class,
                     <div class="boxy boxy--personal-information">
                         <div class="boxy__heading">
                             <h3 class="boxy__heading__title">
-                                {{ 'Participants' | trans }}
+                                {{ 'Participant' | trans }}
                             </h3>
                         </div>
                         <div class="boxy__body">
